--- a/Drogueria 3/html/contactenos.html
+++ b/Drogueria 3/html/contactenos.html
@@ -45,6 +45,7 @@
                         data-bs-toggle="dropdown">Tienda</button>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="../index.html">Inicio</a>
+                        <a class="dropdown-item" href="./Productos.html">Productos</a> 
                         <a class="dropdown-item" href="#">contactenos</a>
                     </div>
                 </div>
