--- a/Drogueria 3/html/Productos.html
+++ b/Drogueria 3/html/Productos.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Cargamos los estilos css desde bootstrap 5 -->
+     <!-- Cargamos los estilos css desde bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/index.css"  rel="stylesheet">
-    <title>Drogueria 3</title>
+    <!--Traemos los estilos del index-->
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/Estilo.css">
+    <title>Productos</title>
 </head>
-
 <body>
-
+    
     <!--Creamos una fila-->
     <div class="row bg-dark">
         <!--esta columna lleva el logo-->
@@ -22,30 +22,31 @@
 
         <!--esta columna esta vacia-->
         <div class="col-sm-1"></div>
+        <div class="row fila1">
         <!--unimos 5 columnas para el título-->
         <div class="col-sm-5 text-light titulopagina"> DROGA CENTER</div>
         <!--Creo un espacio en blanco-->
         <div class="col-sm-1"></div>
         <!--Creo la columna del carrito de compras-->
         <div class="col-sm-1 text-light">
-            <img src="https://tse3.mm.bing.net/th?id=OIP.evEdKHFGYgSB0sDI-JEoqAHaH3&pid=Api"
+            <img src="https://tse2.mm.bing.net/th?id=OIP.jxLR1uf-6y6TfnSU_1OajAHaHa&pid=Api"
                 class="rounded-circle" alt="Cinque Terre" width="40" height="40">
         </div>
         <!--Creo la columna del mensaje-->
         <div class="col-sm-1 text-light">
-            <img src="https://tse1.mm.bing.net/th?id=OIP.bYfbjHD0fpfeMM4CBxiMtQHaHa&pid=Api"
+            <img src="https://tse2.mm.bing.net/th?id=OIP.bwa7fqUn_PGH3cKK9fmBmQHaHa&pid=Api"
                 class="rounded-circle" alt="Cinque Terre" width="40" height="40">
         </div>
         <!--Creo la columna del menú-->
         <div class="col-sm-1 text-light">
             <div class="btn-group">
-                       <div class="btn-group">
-                       <button type="button" class="btn btn-primary dropdown-toggle"
+                <div class="btn-group">
+                    <button type="button" class="btn btn-primary dropdown-toggle"
                         data-bs-toggle="dropdown">Tienda</button>
-                        <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Inicio</a>
-                        <a class="dropdown-item" href="./html/Productos.html">Productos</a> 
-                        <a class="dropdown-item" href="./html/contactenos.html">contactenos</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="../index.html">Inicio</a>
+                        <a class="dropdown-item" href="#">Productos</a> 
+                        <a class="dropdown-item" href="./contactenos.html">contactenos</a>
                     </div>
                 </div>
             </div>
@@ -53,20 +54,19 @@
         <div class="col-sm-1"></div>
     </div>
 
-
-    <!--Creamos la segunda Fila-->
     <div class="row fila2">
         <!--Esta columna esta vacia-->
         <div class="col-sm-1"></div>
         <!--esta columna es para descripción larga-->
         <div class="col-sm-6 descripciondrogueria">
-            ¡Bienvenidos a Drogras Center, tu destino online definitivo para todas tus necesidades de salud y bienestar! En un mundo cada vez más dinámico y conectado, entendemos la importancia de acceder a productos de calidad que respalden tu estilo de vida activo y saludable. En Drogras Center, nos enorgullece ofrecer una amplia gama de productos farmacéuticos, cosméticos, productos para el cuidado personal y mucho más, todo a solo unos clics de distancia. Nuestra misión es brindarte conveniencia, confianza y excelencia en cada compra, respaldada por un equipo dedicado que se esfuerza por superar tus expectativas. Ya sea que busques vitaminas y suplementos, productos para el cuidado de la piel o medicamentos de venta libre, estamos aquí para ayudarte a alcanzar tus metas de bienestar. Descubre la comodidad de comprar en línea con Drogras Center y déjanos ser tu socio en el viaje hacia una vida más saludable y feliz. ¡Únete a nosotros hoy y haz que tu bienestar sea una prioridad!
+            ¡Bienvenidos a Drogras Center, tu destino online definitivo para todas tus necesidades de salud y bienestar! 
+            PUEDES LLAMARNOS LAS 24 HORAS DEL DIA. 
         </div>
         <!--Esta columna esta vacia-->
         <div class="col-sm-1"></div>
         <!--esta columna es para imagen-->
         <div class="col-sm-3">
-            <img src="https://thumbs.dreamstime.com/z/interior-de-la-droguer%C3%ADa-del-departamento-de-la-farmacia-18034973.jpg"
+            <img src="http://3.bp.blogspot.com/_9st9dyfOrnk/SiC1i0lB4WI/AAAAAAAAGZc/kK2TCxA5lT4/s400/LOGO.jpg"
             class="rounded-circle alt="Cinque Terre" width="400sp" height="col-sm-300">
     </div>
         </div>
@@ -77,17 +77,17 @@
 
     <!--insertamos la 3 fila-->
     <div class="row bg-dark">
+    <div class="row fila3">
         <!--Esta columna esta vacia-->
         <div class="col-sm-1"></div>
         <!--Esta columna lleva el copyright-->
-        <div class="col-sm-10 text-primary">@Droga Center2024</div>
+        <div class="col-sm-10 text-light titulopagina">@Droga Center2024</div>
+        <class="rounded-circle" alt="Cinque Terre" width="20" height="20"> 
         <!--Esta columna esta vacia-->
         <div class="col-sm-1"></div>
     </div>
 
-
     <!-- importamos JAVASCRIPT desde Bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
