--- a/Drogueria 3/html/Donaciones.html
+++ b/Drogueria 3/html/Donaciones.html
@@ -42,7 +42,7 @@
             <div class="btn-group">
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary dropdown-toggle"
-                        data-bs-toggle="dropdown">Tienda</button>
+                        data-bs-toggle="dropdown">menu</button>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="../index.html">Inicio</a>
                         <a class="dropdown-item" href="./Donaciones.html">Donaciones</a> 
